<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/country_and_capital"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/world" />
        <!--...............................Question 1.........................-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/question1"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/question1_sentence"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/MyRadioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_1_capital_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question1_capital1" />

                <RadioButton
                    android:id="@+id/question_1_capital_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question1_capital2" />

                <RadioButton
                    android:id="@+id/question_1_capital_3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question1_capital3" />

                <RadioButton
                    android:id="@+id/question_1_capital_4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question1_capital4" />
            </RadioGroup>
        </LinearLayout>
        <!--...............................Question 2.........................-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/question2"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/question2_sentence"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/MyRadioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_2_capital_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question2_capital1" />

                <RadioButton
                    android:id="@+id/question_2_capital_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question2_capital2" />

                <RadioButton
                    android:id="@+id/question_2_capital_3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question2_capital3" />

                <RadioButton
                    android:id="@+id/question_2_capital_4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question2_capital4" />
            </RadioGroup>
            <!--...............................Question 3.........................-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/question3"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/question3_sentence"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/MyRadioGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_3_capital_1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/question3_capital1" />

                    <RadioButton
                        android:id="@+id/question_3_capital_2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/question3_capital2" />

                    <RadioButton
                        android:id="@+id/question_3_capital_3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/question3_capital3" />

                    <RadioButton
                        android:id="@+id/question_3_capital_4"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/question3_capital4" />
                </RadioGroup>
            </LinearLayout>


            <!--...............................Question 4.........................-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/question4"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/question4_sentence"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/check_capital1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question4_capital1" />

                <CheckBox
                    android:id="@+id/check_capital2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question4_capital2" /><!--android:onClick="question4"-->
                <CheckBox
                    android:id="@+id/check_capital3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question4_capital3" />

                <CheckBox
                    android:id="@+id/check_capital4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/question4_capital4" />
            </LinearLayout>


            <!--...............................Question 5.........................-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/question5"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/question5_sentence"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/question5_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/question5_editText"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:onClick="submit"
                android:text="@string/submit_order"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:onClick="resetAll"
                android:text="@string/reset"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>